--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ iniconfig==2.0.0
 isort==5.13.2
 mccabe==0.7.0
 packaging==24.2
+pillow==11.0.0
 platformdirs==4.3.6
 pluggy==1.5.0
 pylint==3.3.2
 pytest==8.3.4
 tk==0.1.0
 tomlkit==0.13.2
+ttkbootstrap==1.10.1
 watchdog==6.0.0
